<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RememberToDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task">New Task</string>
    <string name="title_location_task">Set Location</string>
    <string name="title_update">Edit Task</string>

    <string name="addTask">Add Task</string>
    <string name="task_description">Description</string>
    <string name="task_title">Title</string>

    <string name="button_create">Create</string>
    <string name="button_done">Done</string>
    <string name="button_set_reminder">Set Reminder</string>
    <string name="button_random">Random</string>
    <string name="enter_description">Enter Description</string>


    <string name="no_tasks">No Tasks</string>
    <string name="action_add">Add Task</string>
    <string name="action_create">Create</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete Task</string>
    <string name="action_edit">Edit Task</string>
    <string name="action_share">Share Task</string>

    <string name="enter_location">Enter Location</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="waiting_for_loc">Waiting for location...</string>
    <string name="show_important">Show Important</string>
    <string name="show_all">Show All</string>
    <string name="download_from_cloud">download from cloud</string>
    <string name="upload_to_cloud">upload to cloud</string>
    <string name="enter_user_name">enter user name</string>
    <string name="login">login</string>

</resources>
