<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/Theme.AppCompat">

    <EditText android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/set_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_gravity="center_horizontal|right"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>