<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/location_input"
            android:singleLine="true"
            android:imeActionLabel="@string/abc_action_mode_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location"
            />

        <ImageView
            android:id="@+id/myLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_device_access_location_found"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/set_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_gravity="center_horizontal|right"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:padding="15dp"
        android:id="@+id/location_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_loc"
        />

    <fragment
        android:tag="mapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>
