<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    style="@style/Theme.AppCompat">

    <EditText android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"/>

    <EditText android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/task_description"/>

    <Button
        android:id="@+id/set_reminder_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/button_set_reminder"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/add_image_button"
        android:src="@drawable/attachment"
        android:adjustViewBounds="true"/>



    <ImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:id="@+id/imageView2"
        android:src="@drawable/attachment"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_gravity="right" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_gravity="center|bottom"
        android:adjustViewBounds="true"
        android:background="@drawable/tools_selector"/>

    <Button
        android:id="@+id/get_random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_random"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"/>

    <!-- Clock Reminder -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/add_clock_reminder"
        android:src="@drawable/alarm_clock"
        android:adjustViewBounds="true"
        android:layout_alignEnd="@+id/imageView1" />

    <!-- Add Image -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/add_image_button2"
        android:src="@drawable/camera"
        android:adjustViewBounds="true"
        android:layout_above="@+id/imageView1"
        android:layout_alignLeft="@+id/add_image_button"
        android:layout_alignStart="@+id/add_image_button"
        android:layout_marginBottom="55dp" />

    <!-- Priority -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/priority_button_button"
        android:src="@drawable/exclamation_mark"
        android:adjustViewBounds="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageView1"
        android:layout_marginRight="30dp" />

    <!-- add_voice_button -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/add_voice_button"
        android:src="@drawable/microphone"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/destination_reminder_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp" />

    <!-- destination_reminder_button -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/destination_reminder_button"
        android:src="@drawable/map"
        android:adjustViewBounds="true"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="31dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/add_image_button" />




</LinearLayout>